--- a/test.html
+++ b/test.html
@@ -2,6 +2,6 @@
     <head>Test</head>
     <body>
         <h1>Testing status_check</h1>
-        <p>Checking Date command in branch feature01</p>
+        <p>Checking Date </p>
     </body>
 </html>
