--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
     <head>Test</head>
     <body>
-        <h1>Testing status_check</h1>
+        <h1>Updating......</h1>
         
     </body>
 </html>
